# Conteudo-Fatec-2026-1

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  cleanup-preview.yml
AM/01_Introducao/01_Teoria/: index.html
AM/01_Introducao/02_Pratica/: index.html
AM/02_Perceptron/01_Teoria/: index.html
AM/02_Perceptron/02_Pratica/: index.html
AM/02_Perceptron/03_Vetores_Matrizes_NumPy/: index.html
AM/02_Perceptron/05_Revisao_NumPy/: index.html
AM/03_Preparacao_e_Engenharia_Dados/01_Ciclo_de_Dados_Pandas/: index.html
AM/03_Preparacao_e_Engenharia_Dados/02_Engenharia_Atributos/: index.html
AM/03_Preparacao_e_Engenharia_Dados/03_Revisao_Pandas/: index.html
AM/04_Redes_Neurais_Mlp/01_Teoria/: index.html
AM/04_Redes_Neurais_Mlp/02_Pratica/: index.html
AM/04_Redes_Neurais_Mlp/03_Regressao/: index.html
AM/05_Classificacao_vizinhanca/01_Teoria/: index.html
LDDM/01_Introducao/01_Introducao/: index.html
docs/: AM.md  LDW.md  index.md
docs/LDDM/: 02_Setup.md  03_Pratica.md
docs/stylesheets/: extra.css
previews/feature-am-revisao-perceptron/: 404.html  index.html
previews/feature-ldw-front-basico/: 404.html  index.html
previews/feature-ldw-revisao/: 404.html  index.html
previews/feature-ldw-revisao/LDW/04_Revisao/enquete_tech/: alembic.ini  backend.py  database.py  frontend.py  index.html  pyproject.toml  seed.py
previews/feature-ldw-revisao/LDW/04_Revisao/enquete_tech/migrations/: env.py
search/: search_index.json
site/: 404.html  index.html
site/LDW/: index.html
site/search/: search_index.json
(+197 files in other folders)
